# w16-project

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_RU.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_RU.md  CONTRIBUTING.md  CONTRIBUTING_RU.md  Cargo.toml  LICENSE  NOTICE.html  README.md  README_EN.md  README_RU.md  about.hbs  about.toml  hello.py  w16-logo.ascii  w16_logo.yml
.github/workflows/: ci.yml
comparisons/: benches.js  benches.py  benches.w16h
example-langs/: Cargo.toml  NAVIGATION.md
example-langs/karbon/: Cargo.toml  KARBON.md  print.py  simple.krb
example-langs/w16-cc/: Cargo.toml  W16-CC.md  six-seven.c  wcc_logo.yml
poligon/: loops.w16h  no-op.w16h
w16-apex/: README.md  xmake.lua
w16-apex/wapex/: xmake.lua
w16-cli/: Cargo.toml  W16-CLI.md
w16-cli/src/: cmd.rs  error.rs  executer.rs  help.rs  main.rs  parser.rs  tokenizer.rs
w16-core/: Cargo.toml  W16-CORE.md
w16-core/benches/: common.rs  fast_jit.rs  fast_orca.rs  fast_vm.rs
w16-core/src/: bytecode.rs  lib.rs
w16-core/src/interpreter/: mod.rs  vm.rs
w16-core/src/interpreter/evms/: README.md  mod.rs  orca_evm.rs
w16-core/src/jit/: jit_compiler.rs  mod.rs
w16-core/tests/: jit_tests.rs  vm_tests.rs
w16-core/tests/jit_tests/: main_jit.rs
w16-core/tests/vm_tests/: helpers.rs  vm_arithmetic.rs  vm_call_stack.rs  vm_control_flow.rs  vm_memory.rs  vm_registers.rs
w16-dot-lib/: Cargo.toml  README.md
w16-dot-lib/src/: lib.rs
w16-ir/: Cargo.toml  W16-IR.md
w16-ir/docs/: IR_SYNTAX.md
w16-ir/src/: compiler_to_bytecode.rs  hir.rs  lib.rs  mir.rs
w16-ir/src/lexer/: mod.rs  (+2 more)
w16-langs/: Cargo.toml  NAVIGATION.md
w16-lib/: Cargo.toml  W16-LIB.md
w16-lib/src/: lib.rs
w16-lib/tests/: README.md  fuzz_tests.rs
w16c/: Cargo.toml  README.md
w16c/src/: lib.rs
w16c/src/dotobj/: mod.rs
web-docs/: README.md  index.html  style.css
(+95 files in other folders)
