[package]
name = "w16-core"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Ядро W16"
repository = "https://github.com/dev-er1/w16-project"

[dependencies]
cranelift = "0.132.0"
cranelift-jit = "0.132.0"
cranelift-module = "0.132.0"
cranelift-native = "0.132.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fast_vm"
harness = false

[[bench]]
name = "fast_jit"
harness = false

[[bench]]
name = "fast_orca"
harness = false
