[package]
name = "w16c"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
w16-core = {  path = "../w16-core" }

cranelift-codegen = "0.132.0"
cranelift-frontend = "0.132.0"
cranelift-module = "0.132.0"
cranelift-object = "0.132.0"
target-lexicon = "0.13.5"
cranelift = "0.132.0"
cc = "1.2.62"